==> davecarrijo/QMK_keychron-k8/lib/chibios-contrib/os/hal/ports/SN32/LLD/SN32F2xx/USB/hal_usb_lld.c <==
#include <string.h>
#include "hal.h"

static void usb_lld_serve_interrupt(USBDriver *usbp) {
    uint32_t iwIntFlag;

    /* Get Interrupt Status and clear immediately. */
    iwIntFlag = SN32_USB->INSTS;
    /* Keep only PRESETUP & ERR_SETUP & ACK and NAK flags. */
    SN32_USB->INSTSC = ~(mskEP0_PRESETUP|mskERR_SETUP 
                            |mskEP6_ACK|mskEP5_ACK|mskEP4_ACK|mskEP3_ACK|mskEP2_ACK|mskEP1_ACK
                            |mskEP6_NAK|mskEP5_NAK|mskEP4_NAK|mskEP3_NAK|mskEP2_NAK|mskEP1_NAK);

    if (iwIntFlag == 0) {
        //@20160902 add for EMC protection
        SN32_USB->CFG |= (mskESD_EN|mskPHY_EN);
        return;
    }

    /////////////////////////////////////////////////////////////////
    /* Device Status Interrupt (BusReset, Suspend, Resume, Wakeup) */
    /////////////////////////////////////////////////////////////////
    if (iwIntFlag & (mskBUS_RESET | mskBUS_SUSPEND | mskBUS_RESUME | mskBUS_WAKEUP)) {
        if (iwIntFlag & mskBUS_RESET) {
            /* BusReset */
            SN32_USB->CFG |= (mskESD_EN|mskPHY_EN);
            SN32_USB->INSTSC = (mskBUS_RESET);
            _usb_reset(usbp);
        }
        else if (iwIntFlag & mskBUS_SUSPEND) {
            /* Suspend */
            SN32_USB->CFG &= ~(mskESD_EN|mskPHY_EN);
            _usb_suspend(usbp);
            SN32_USB->INSTSC = (mskBUS_SUSPEND);
        }
        else if(iwIntFlag & mskBUS_RESUME) {
            /* Resume */
            SN32_USB->CFG |= (mskESD_EN|mskPHY_EN);
            SN32_USB->INSTSC = (mskBUS_RESUME);
        }
        else if(iwIntFlag & mskBUS_WAKEUP) {
            /* Wakeup */
            SN32_USB->CFG |= (mskESD_EN|mskPHY_EN);
            SN32_USB->INSTSC = (mskBUS_WAKEUP);
            _usb_wakeup(usbp);
        }
    }
    /////////////////////////////////////////////////
    /* Device Status Interrupt (SETUP, IN, OUT)    */
    /////////////////////////////////////////////////
    else if (iwIntFlag & mskERR_SETUP) {
        SN32_USB->INSTSC = (mskERR_SETUP);
        usb_lld_stall_in(usbp, 0);
    }
    else if (iwIntFlag & (mskEP0_SETUP|mskEP0_IN|mskEP0_OUT|mskEP0_IN_STALL|mskEP0_OUT_STALL)) {
        const USBEndpointConfig *epcp = usbp->epc[0];

        if (iwIntFlag & mskEP0_SETUP) {
            /* SETUP */
            /* Clear receiving in the chibios state machine */
            (usbp)->receiving &= ~1;
            SN32_USB->INSTSC = (mskEP0_PRESETUP);
            /* Call SETUP function (ChibiOS core), which prepares
             * for send or receive and releases the buffer
             */
            _usb_isr_invoke_setup_cb(usbp, 0);
            SN32_USB->INSTSC = (mskEP0_SETUP);
        }
        else if (iwIntFlag & mskEP0_IN) {
            USBInEndpointState *isp = epcp->in_state;

            /* IN */
            /* Special case for SetAddress for EP0*/
            if((((uint16_t)usbp->setup[0]<<8)|usbp->setup[1]) == 0x0500) {
              usbp->address = usbp->setup[2];
              usb_lld_set_address(usbp);
              _usb_isr_invoke_event_cb(usbp, USB_EVENT_ADDRESS);
              usbp->state = USB_SELECTED;
              usb_lld_stall_in(usbp, 0);
            }

            isp->txcnt += isp->txlast;
            size_t txed = isp->txsize - isp->txcnt;
            if (txed > 0) {
                /* Transfer not completed, there are more packets to send.*/
                if (txed > epcp->in_maxsize)
                    txed = epcp->in_maxsize;

                /* Writes the packet from the defined buffer.*/
                isp->txbuf += isp->txlast;
                isp->txlast = txed;
                osalSysLockFromISR();
                sn32_usb_write_fifo(0, isp->txbuf, txed, true);
                osalSysUnlockFromISR();

                EPCTL_SET_STAT_ACK(0, txed);
            }
            else {
                /* Transfer complete, invokes the callback.*/
                //EPCTL_SET_STAT_NAK(0); //useless mcu resets it anyways
                _usb_isr_invoke_in_cb(usbp, 0);
            }

            SN32_USB->INSTSC = (mskEP0_IN);
        }
        else if (iwIntFlag & mskEP0_OUT) {
            USBOutEndpointState *osp = epcp->out_state;
            /* OUT */

            size_t rxed = SN32_USB->EPCTL[0] & mskEPn_CNT;
            if (rxed) {
                osalSysLockFromISR();
                sn32_usb_read_fifo(0, osp->rxbuf, rxed, true);
                osalSysUnlockFromISR();

                /* Update transaction data */
                epcp->out_state->rxbuf += rxed;
                epcp->out_state->rxcnt += rxed;
                epcp->out_state->rxsize -= rxed;
                epcp->out_state->rxpkts -= 1;

                /* The transaction is completed if the specified number of packets
                   has been received or the current packet is a short packet.*/
                if ((rxed < epcp->out_maxsize) || (epcp->out_state->rxpkts == 0))
                {
                    /* Transfer complete, invokes the callback.*/
                    //EPCTL_SET_STAT_NAK(0); //useless mcu resets it anyways
                    _usb_isr_invoke_out_cb(usbp, 0);
                }
                else {
                    /* Transfer not complete, there are more packets to receive.*/
                    EPCTL_SET_STAT_ACK(0, 0);
                }
            }

            SN32_USB->INSTSC = (mskEP0_OUT);
        }
        else if (iwIntFlag & (mskEP0_IN_STALL)) {
            /* EP0_IN_STALL */
            usb_lld_stall_in(usbp, 0);
            SN32_USB->INSTSC = (mskEP0_IN_STALL);
        }
        else if (iwIntFlag & (mskEP0_OUT_STALL))
        {
            /* EP0_OUT_STALL */
            usb_lld_stall_out(usbp, 0);
            SN32_USB->INSTSC = (mskEP0_OUT_STALL);
        }
    }
    /////////////////////////////////////////////////
    /* Device Status Interrupt (EPnACK)            */
    /////////////////////////////////////////////////
    else if (iwIntFlag & (mskEP6_ACK|mskEP5_ACK|mskEP4_ACK|mskEP3_ACK|mskEP2_ACK|mskEP1_ACK)) {
        // Determine the interrupting endpoint, direction, and clear the interrupt flag
        for(usbep_t ep = 1; ep <= USB_MAX_ENDPOINTS; ep++) {
            if (iwIntFlag & mskEPn_ACK(ep)){
                handleACK(usbp, ep);
                SN32_USB->INSTSC = (mskEPn_ACK(ep));
            }
        }
    }
    else if (iwIntFlag & (mskEP6_NAK|mskEP5_NAK|mskEP4_NAK|mskEP3_NAK|mskEP2_NAK|mskEP1_NAK)) {
        // Determine the interrupting endpoint, direction, and clear the interrupt flag
        for(usbep_t ep = 1; ep <= USB_MAX_ENDPOINTS; ep++) {
            if (iwIntFlag & mskEPn_NAK(ep)){
                handleNAK(usbp, ep);
                SN32_USB->INSTSC = (mskEPn_NAK(ep));
            }
        }
    }

    /////////////////////////////////////////////////
    /* Device Status Interrupt (SOF)               */
    /////////////////////////////////////////////////
    if ((iwIntFlag & mskUSB_SOF) && (SN32_USB->INTEN & mskUSB_SOF_IE)) {
        /* SOF */
        _usb_isr_invoke_sof_cb(usbp);
        SN32_USB->INSTSC = (mskUSB_SOF);
    }
}

void usb_lld_init(void) {
#if SN32_USB_USE_USB1 == TRUE
    /* Driver initialization.*/
    usbObjectInit(&USBD1);
#endif /* SN32_USB_USE_USB1 == TRUE */
}

void usb_lld_start(USBDriver *usbp) {
  if (usbp->state == USB_STOP) {
    /* Clock activation.*/
#if SN32_USB_USE_USB1
    if (&USBD1 == usbp) {
      /* USB clock enabled.*/
      sys1EnableUSB();
      /* Powers up the transceiver while holding the USB in reset state.*/
      SN32_USB->SGCTL = (mskBUS_DRVEN|mskBUS_J_STATE);
      SN32_USB->CFG = (mskVREG33_EN|mskPHY_EN|mskDPPU_EN|mskSIE_EN|mskESD_EN);
      /* Set up hardware configuration.*/
      SN32_USB->PHYPRM = 0x80000000;
      SN32_USB->PHYPRM2 = 0x00004004;
      /* Enable the USB Bus Interrupts.*/
      SN32_USB->INTEN = mskBUS_IE;

      nvicEnableVector(SN32_USB_NUMBER, SN32_USB_IRQ_PRIORITY);
      /* Releases the reset state.*/
      SN32_USB->SGCTL &= ~mskBUS_DRVEN;
    }
#endif /* SN32_USB_USE_USB1 == TRUE */
    /* Reset procedure enforced on driver start.*/
    usb_lld_reset(usbp);
  }
}

void usb_lld_stop(USBDriver *usbp) {
  /* If in ready state then disables the USB clock.*/
  if (usbp->state != USB_STOP) {
#if SN32_USB_USE_USB1 == TRUE
    /* Disables the peripheral.*/
    if (&USBD1 == usbp) {
        nvicDisableVector(SN32_USB_NUMBER);
        sys1DisableUSB();
    }
#endif /* SN32_USB_USE_USB1 == TRUE */
  }
}

void usb_lld_reset(USBDriver *usbp) {
    /* Post reset initialization.*/
    SN32_USB->INSTSC = (0xFFFFFFFF);

    /* Set the address to zero during enumeration.*/
    usbp->address = 0;
    SN32_USB->ADDR  = 0;

    /* Resets the packet memory allocator.*/
    usb_pm_reset(usbp);

    /* EP0 initialization.*/
    usbp->epc[0] = &ep0config;
    usb_lld_init_endpoint(usbp, 0);

    /* Enable other interrupts.*/
    SN32_USB->INTEN |= (mskUSB_IE|mskEPnACK_EN|mskBUSWK_IE|mskUSB_SOF_IE);
    SN32_USB->INTEN |= (mskEP1_NAK_EN|mskEP2_NAK_EN|mskEP3_NAK_EN|mskEP4_NAK_EN);
#if (USB_ENDPOINTS_NUMBER > 4)
    SN32_USB->INTEN |= (mskEP5_NAK_EN|mskEP6_NAK_EN);
#endif /* (USB_ENDPOINTS_NUMBER > 4) */

}

void usb_lld_set_address(USBDriver *usbp) {

    SN32_USB->ADDR = usbp->address & 0x7F;
}

void usb_lld_init_endpoint(USBDriver *usbp, usbep_t ep) {
    const USBEndpointConfig *epcp = usbp->epc[ep];

    /* Make sure direction flags are not set.*/
    if(ep > 0 && ep <= USB_MAX_ENDPOINTS) {
        SN32_USB->CFG &= ~mskEPn_DIR(ep);
    }

    /* Set the endpoint type. */
    switch (epcp->ep_mode & USB_EP_MODE_TYPE) {
        case USB_EP_MODE_TYPE_ISOC:
            break;
        case USB_EP_MODE_TYPE_BULK:
            break;
        case USB_EP_MODE_TYPE_INTR:
            break;
        default:
            break;
    }

    /* IN endpoint? */
    if (epcp->in_state != NULL) {
        if(ep ==0) {
            usb_lld_stall_in(usbp, 0);
        }
        else if(ep <= USB_MAX_ENDPOINTS) {
            /* Set endpoint PMA buffer offset in USB configuration register.*/
            uint32_t buff_addr = usb_pm_alloc(usbp, epcp->in_maxsize);
            USB_SET_BUFFER_OFST(ep,buff_addr);
        }
    }

    /* OUT endpoint? */
    if (epcp->out_state != NULL) {
        if(ep ==0) {
            usb_lld_stall_out(usbp, 0);
        }
        else if(ep <= USB_MAX_ENDPOINTS) {
            /* Set endpoint direction flag in USB configuration register.*/
            SN32_USB->CFG |= mskEPn_DIR(ep);
            /* Set endpoint PMA buffer offset in USB configuration register.*/
            uint32_t buff_addr = usb_pm_alloc(usbp, epcp->out_maxsize);
            USB_SET_BUFFER_OFST(ep,buff_addr);
        }
    }

    /* Enable endpoint. */
    if(ep <= USB_MAX_ENDPOINTS) {
        SN32_USB->EPCTL[ep] |= mskEPn_ENDP_EN;
    }
}

void usb_lld_disable_endpoints(USBDriver *usbp) {

    /* Resets the packet memory allocator.*/
    usb_pm_reset(usbp);

    /* Disabling all endpoints.*/
    for(usbep_t ep=1; ep <= USB_MAX_ENDPOINTS; ep++) {
        SN32_USB->EPCTL[ep] = 0;
        SN32_USB->CFG &= ~mskEPn_DIR(ep);
    }
}

usbepstatus_t usb_lld_get_status_out(USBDriver *usbp, usbep_t ep) {
    (void)usbp;
    if (ep > USB_MAX_ENDPOINTS)
        return EP_STATUS_DISABLED;
    if ((SN32_USB->EPCTL[ep] & mskEPn_ENDP_EN) != mskEPn_ENDP_EN)
        return EP_STATUS_DISABLED;
    if ((SN32_USB->EPCTL[ep] & mskEPn_ENDP_STATE) == mskEPn_ENDP_STATE_STALL)
        return EP_STATUS_STALLED;
    return EP_STATUS_ACTIVE;
}

usbepstatus_t usb_lld_get_status_in(USBDriver *usbp, usbep_t ep) {
    (void)usbp;
    if (ep > USB_MAX_ENDPOINTS)
        return EP_STATUS_DISABLED;
    if ((SN32_USB->EPCTL[ep] & mskEPn_ENDP_EN) != mskEPn_ENDP_EN)
        return EP_STATUS_DISABLED;
    if ((SN32_USB->EPCTL[ep] & mskEPn_ENDP_STATE) == mskEPn_ENDP_STATE_STALL)
        return EP_STATUS_STALLED;
    return EP_STATUS_ACTIVE;
}

void usb_lld_read_setup(USBDriver *usbp, usbep_t ep, uint8_t *buf) {
    osalSysLockFromISR();
    sn32_usb_read_fifo(ep, buf, 8, false);
    osalSysUnlockFromISR();
}

void usb_lld_start_in(USBDriver *usbp, usbep_t ep)
{
    size_t n;
    USBInEndpointState *isp = usbp->epc[ep]->in_state;

    /* Transfer initialization.*/
    n = isp->txsize;

    if((n >= 0) || (ep == 0)) {

        if (n > (size_t)usbp->epc[ep]->in_maxsize)
            n = (size_t)usbp->epc[ep]->in_maxsize;

        isp->txlast = n;
        osalSysLockFromISR();
        sn32_usb_write_fifo(ep, isp->txbuf, n, false);
        osalSysUnlockFromISR();
        nakcnt[ep] = 1;
        EPCTL_SET_STAT_ACK(ep, n);
    }
    else {
        _usb_isr_invoke_in_cb(usbp, ep);
    }
}

void usb_lld_stall_out(USBDriver *usbp, usbep_t ep) {
    (void)usbp;
    if (ep == 0 ) {
        if (SN32_USB->INSTS & mskEP0_PRESETUP) {
            return;
        }
        if (SN32_USB->INSTS & mskEP0_OUT_STALL) {
            SN32_USB->EPCTL[ep] |= mskEP0_OUT_STALL_EN;
            return;
        }
    }
    EPCTL_SET_STAT_STALL(ep);
}

void usb_lld_stall_in(USBDriver *usbp, usbep_t ep) {
    (void)usbp;
    if (ep == 0 ) {
        if (SN32_USB->INSTS & mskEP0_PRESETUP) {
            return;
        }
        if (SN32_USB->INSTS & mskEP0_IN_STALL) {
            SN32_USB->EPCTL[ep] |= mskEP0_IN_STALL_EN;
            return;
        }
    }
    EPCTL_SET_STAT_STALL(ep);
}

void usb_lld_clear_out(USBDriver *usbp, usbep_t ep) {
    (void)usbp;
    /* Makes sure to not put to NAK an endpoint that is already
       transferring.*/
    if (!(SN32_USB->EPCTL[ep] & mskEPn_ENDP_STATE_NAK))
        EPCTL_SET_STAT_NAK(ep);
}

void usb_lld_clear_in(USBDriver *usbp, usbep_t ep) {
    (void)usbp;
    /* Makes sure to not put to NAK an endpoint that is already
       transferring.*/
    if (!(SN32_USB->EPCTL[ep] & mskEPn_ENDP_STATE_NAK))
        EPCTL_SET_STAT_NAK(ep);
}
